add more mixins and style philosophy section

--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,4 +1,4 @@
-///******extra shared files*****///
+///******Extra shared files*****///
 
 .red-border-container {
     width: 90%;
@@ -14,7 +14,7 @@
         margin: 0 auto;
     }
 }
-/// this framework is for the block quotes to make the red bar left//
+/// Container wrapper to wrap all the content in the pages//
 .content-wrapper {
     border-bottom: solid 3px $color_btn_green;
     max-width: 85%;
