--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -155,7 +155,8 @@ font-size: 1.1rem;
         color: $color_btn_hover_green;
     }
 }
-.footer-block-item2 a:hover {
+.footer-block-item2
+a:hover {
     cursor: pointer;
     color: $color_btn_hover_green;
 }
