--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,19 +1,17 @@
 ///******extra shared files*****///
-
 .red-border-container {
     width: 90%;
-    height: 160px;
-    display: inline-block;
+    height: 30%;
+    display: block;
     margin-left: 7.5%;
     padding-right: 9.4%;
     padding-left: 15px;
     border-left: 7px solid $border_left_red;
-    overflow: visible;
-
+    border-bottom: none;
     p {
-        margin: 0 auto;
+      margin: 0 auto;
     }
-}
+  }
 /// this framework is for the block quotes to make the red bar left//
 .content-wrapper {
     border-bottom: solid 3px $color_btn_green;
