--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -83,15 +83,16 @@ p {
 	.nw-part1 {
 		display: flex;
 		flex-direction: row;
-		align-items: center;
+		align-items: flex-start;
 
 		.why-nw {
 			display: block;
 			flex-shrink: 4;
+			text-align: left;
 		}
 
 		.nw-img {
-			margin-top: 0;
+			margin-top: 2rem;
 			padding-left: 1rem;
 		}
 	}
@@ -145,20 +146,14 @@ p {
 	}
 	@include desktop {
 	.nw-part3 {
+		display: flex;
+		align-items: center;
+		flex-direction: row-reverse;
 		.money-spend {
-			flex-shrink: 25;
-			p{
-				display: block;
-			}
+			display: block;
+			flex-shrink: 6;
 		}
-			display: flex;
-			align-items: center;
-			flex-direction: row-reverse;
-		}
-
-		.money-spend-para {
-			flex-shrink: 5;
-		}
+	 }
 	}
 
 	.funding-btn {
